[package]
name = "livereload-server"
version = "0.1.0"
edition = "2021"
authors = [ "Dzejkop <jakubtrad@gmail.com>" ]

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive", "env", "color"] }
dotenv = "0.15.0"
log = "0.4.17"
notify = "5.0.0-pre.16"
pretty_env_logger = "0.4.0"
tokio = { version = "1.20.1", features = [ "full" ] }
hyper = { version = "0.14", features = [ "full" ] }
regex = "1.6.0"
warp = "0.3.2"
futures-util = "0.3.23"
