[package]
name = "livereload-server"
description = "A server to serve static content and automatically reload it one a file in a directory has been changed"
version = "0.2.0"
edition = "2021"
authors = ["Dzejkop <jakubtrad@gmail.com>"]
repository = "https://github.com/Dzejkop/livereload-server"
license = "MIT"
readme = "README.md"
keywords = ["server", "livereload"]
categories = [
    "web-programming",
    "web-programming::http-server",
    "command-line-utilities",
]

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive", "env", "color"] }
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.20.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
regex = "1.6.0"
warp = "0.3.2"
futures-util = "0.3.23"

# TODO: Use a stable version of notify
notify = "5.0.0-pre.16"
